--- a/trunk/general/TDLIB/Interface/CRM/Model/crm_qita_jlsq_newai.ini
+++ b/trunk/general/TDLIB/Interface/CRM/Model/crm_qita_jlsq_newai.ini
@@ -10,10 +10,10 @@ primarykey = 0
 uniquekey = 0
 systemorder = 0:desc
 pagenums_model = 25
-action_search = 1,2,3,4,5,6,7,8,9,10,11,12
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12
-showlistnull = null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = autoincrement,input,date,textarea,input,boolean,date,boolean,date,textarea,tablefiltercolor:user:1:2,date
+action_search = 1,2,3,4,5,6,8,10,11,12
+showlistfieldlist = 1,2,3,4,5,6,8,10,11,12
+showlistnull = null,null,null,null,null,null,null,null,null,null
+showlistfieldfilter = autoincrement,input,date,textarea,input,boolean,boolean,textarea,tablefiltercolor:user:1:2,date
 
 [delete_array]
 tablename = crm_qita_sq
@@ -57,9 +57,9 @@ action_submit = submit:save:s,cancel:cancel:c
 primarykey = 0
 uniquekey = 0
 returnmodel = init_default
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12
+showlistfieldlist = 6,1,2,3,4,5,8,10,11,12,7,9
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = readonly,readonly,readonly,readonly,readonly,boolean,date,boolean,date,textarea,hidden_field:1:name,system_datetime
+showlistfieldfilter = boolean,readonly,readonly,readonly,readonly,usertoname,boolean,textarea,hidden_field:1:name,system_datetime,nowshow,nowshow
 showlistfieldprivate = ,,,,,,,,,,,
 
 [view_default]
