--- a/trunk/general/TDLIB/Interface/CRM/Model/crm_yanchifukuan_jlsq_newai.ini
+++ b/trunk/general/TDLIB/Interface/CRM/Model/crm_yanchifukuan_jlsq_newai.ini
@@ -13,7 +13,7 @@ pagenums_model = 25
 action_search = 1,2,3,4,5,6,14,15,16,17
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,21,18,19,20
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = autoincrement,input,date,tablefiltercolor:crm_suoshufenlei_sq:1:1,date,input,textarea,input,input,date,date,date,textarea,input,boolean,date,boolean,date,textarea,tablefiltercolor:user:1:2,date
+showlistfieldfilter = autoincrement,input,date,tablefiltercolor:crm_suoshufenlei_sq:1:1,date,input,textarea,input,input,date,date,date,textarea,input,boolean,date,boolean,input,textarea,tablefiltercolor:user:1:2,input
 
 [delete_array]
 tablename = crm_yanchifukuan_sq
@@ -56,9 +56,9 @@ action_submit = submit:save:s,cancel:cancel:c
 primarykey = 0
 uniquekey = 0
 returnmodel = init_default
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,21,18,19,20
+showlistfieldlist = 15,1,2,3,4,5,6,7,8,9,10,11,12,13,14,17,18,19,20,16,21
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = readonly,readonly,readonly,readonly,readonly,readonly,readonly,readonly,readonly,readonly,readonly,readonly,readonly,readonly,boolean,date,boolean,date,textarea,hidden_field:1:name,system_datetime
+showlistfieldfilter = boolean,readonly,readonly,readonly,tablefilter:crm_suoshufenlei_sq:1:1,readonly,readonly,textarea,input,input,date,date,date,textarea,usertoname,boolean,textarea,hidden_field:1:name,system_datetime,nowshow,nowshow
 showlistfieldprivate = ,,,,,,,,,,,,,,,,,,,,
 
 [view_default]
