--- a/trunk/general/TDLIB/Interface/CRM/Model/crm_yongjin_bmsq_newai.ini
+++ b/trunk/general/TDLIB/Interface/CRM/Model/crm_yongjin_bmsq_newai.ini
@@ -45,8 +45,8 @@ primarykey = 0
 uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,14,15,16
-showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = autoincrement,input,usertoname,date,tablefilter:crm_suoshufenlei_sq:1:1,input,input,input,textarea,userdefine:jumpkehuinfor,usertoname,textarea,hidden_field:1:name,system_datetime
+showlistnull = notnull,notnull,notnull,notnull,null,null,notnull,null,null,notnull,null,null,null,null
+showlistfieldfilter = autoincrement,input,usertoname,date,tablefilter:crm_suoshufenlei_sq:1:1,input,userdefine:jumpzhanghuinfor,input,textarea,userdefine:jumpkehuinfor,usertoname,textarea,hidden_field:1:name,system_datetime
 showlistfieldprivate = ,,,,,,,,,,,,,
 
 [edit_default]
