--- a/trunk/general/TDLIB/Interface/CRM/Model/crm_customer_newai.ini
+++ b/trunk/general/TDLIB/Interface/CRM/Model/crm_customer_newai.ini
@@ -27,15 +27,15 @@ tablename = crm_customer
 tabletitle = exportcrm_customer
 primarykey = 0
 returnmodel = init_default
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,23,24,25,26,31,32,33,34,35
+showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,23,24,25,26,29,30,31,32,33,34,35
 group_filter = 
 
 [import_default]
 tablename = crm_customer
 tabletitle = importcrm_customer
-primarykey = 2,29:userid,30:datetime
+primarykey = 2
 returnmodel = init_default
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,23,24,25,26,31,32,33,34,35
+showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,23,24,25,26,29,30,31,32,33,34,35
 group_filter = 
 
 [add_default]
