--- a/general/TDLIB/Interface/CRM/Model/crm_expense_newai.ini
+++ b/general/TDLIB/Interface/CRM/Model/crm_expense_newai.ini
@@ -29,15 +29,15 @@ tablename = crm_expense
 tabletitle = exportcrm_expense
 primarykey = 0
 returnmodel = init_default
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,15,16,19,20,21,22,23
+showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,15,16,17,18,19,20,21,22,23
 group_filter = 
 
 [import_default]
 tablename = crm_expense
 tabletitle = importcrm_expense
-primarykey = 1,17:userid,18:datetime
+primarykey = 1
 returnmodel = init_default
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,15,16,19,20,21,22,23
+showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,15,16,17,18,19,20,21,22,23
 group_filter = 
 
 [add_default]
