--- a/trunk/general/TDLIB/Interface/TuShuGuanLi/Model/booksset_department_newai.ini
+++ b/trunk/general/TDLIB/Interface/TuShuGuanLi/Model/booksset_department_newai.ini
@@ -3,17 +3,18 @@ tablename = booksset
 tabletitle = listbooksset
 tablewidth = 100%
 nullshow = 1
-action_model = export_default:export:x
 row_element = view:view_default,edit:edit_default
 bottom_element = chooseall:chooseall,edit:edit_default
 primarykey = 0
 uniquekey = 0
 systemorder = 0:desc
 pagenums_model = 25
+UserSumFunction = 14
+UserUnitFunction = RMB
 action_search = 1,2,3,4,5,6,7,8,10,11,9,12,13,14,15,16,17,18,19,20,21
-showlistfieldlist = 1,2,3,4,5,6,7,8,10,11,9,12,13,14,15,16,17,18,19,20,21
-showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = input,input,input,input,input,input,input,input,input,userdefine:bookstatus,tdoafile,input,input,input,input,input,input,input,input,input,tablefiltercolor:user:1:2
+showlistfieldlist = 1,2,3,4,5,6,7,8,10,11,9,12,13,14,15,16,17,18,19,20,21,22
+showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
+showlistfieldfilter = input,input,input,input,input,input,tablefiltercolor:department:1:1,input,input,tablefiltercolor:bookszhuangtai:1:1,tdoafile,input,input,input,input,input,input,input,input,input,tablefiltercolor:user:1:2,input
 
 [init_customer]
 tablename = booksset
@@ -58,10 +59,10 @@ action_submit = submit:save:s,cancel:cancel:c
 primarykey = 0
 uniquekey = 0
 returnmodel = init_default
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,12,13,14,15,16,17,18,19,20,21,22
-showlistnull = notnull,null,notnull,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = input,autoincrement,input,radiofilter:bookssetleibie:1:1,input,input,userdefine:jineinput,nowshow,singlefile,input,input,input,userdefine:jineinput,input,input,input,input,input,textarea,hidden_field:1:name,system_datetime
-showlistfieldprivate = ,,,,,,,,,,,,,,,,,,,,
+showlistfieldlist = 1,2,3,4,7,8,9,10,12,13,14,15,16,17,18,19,20,21,22
+showlistnull = notnull,null,notnull,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
+showlistfieldfilter = input,autoincrement,input,radiofilter:bookssetleibie:1:1,depttoname,nowshow,tdoafile,input,notshow,notshow,userdefine:jineinput,input,input,date,input,input,textarea,hidden_field:1:name,system_datetime
+showlistfieldprivate = ,,,,,,,,,,,,,,,,,,
 
 [edit_default]
 tablename = booksset
@@ -70,11 +71,10 @@ action_submit = submit:save:s,cancel:cancel:c
 primarykey = 0
 uniquekey = 0
 returnmodel = init_default
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,11,12,13,14,15,16,17,18,19
-showlistnull = notnull,null,notnull,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = input,autoincrementdate,input,radiofilter:bookssetleibie:1:1,input,input,depttoname,nowshow,input,notshow,notshow,userdefine:jineinput,input,input,date,input,input,textarea
-showlistfieldprivate = ,,,,,,,,,,,,,,,,,
-
+showlistfieldlist = 1,2,3,4,7,8,9,10,12,13,14,15,16,17,18,19,20
+showlistnull = notnull,null,notnull,null,null,null,null,null,null,null,null,null,null,null,null,null,null
+showlistfieldfilter = input,autoincrement,input,radiofilter:bookssetleibie:1:1,depttoname,nowshow,tdoafile,input,notshow,notshow,userdefine:jineinput,input,input,date,input,input,textarea
+showlistfieldprivate = ,,,,,,,,,,,,,,,,
 
 [view_default]
 tablename = booksset
@@ -84,7 +84,7 @@ primarykey = 0
 uniquekey = 0
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,11,12,13,14,15,16,17,18,19,20,21
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = input,autoincrementdate,input,radiofilter:bookssetleibie:1:1,input,input,depttoname,userdefine:jumpuserinfor2,input,notshow,notshow,userdefine:jineinput,input,input,date,input,input,textarea,tablefiltercolor:user:1:2,input
+showlistfieldfilter = input,autoincrementdate,input,radiofilter:bookssetleibie:1:1,input,input,depttoname,userdefine:jumpuserinfor2,tdoafile,notshow,notshow,userdefine:jineinput,input,input,date,input,input,textarea,tablefiltercolor:user:1:2,input
 
 [view_customer]
 tablename = booksset
