--- a/trunk/general/TDLIB/Interface/TuShuGuanLi/Model/booksset_newai.ini
+++ b/trunk/general/TDLIB/Interface/TuShuGuanLi/Model/booksset_newai.ini
@@ -10,6 +10,8 @@ primarykey = 0
 uniquekey = 0
 systemorder = 0:desc
 pagenums_model = 25
+UserSumFunction = 14
+UserUnitFunction = RMB
 action_search = 1,2,3,4,5,6,7,8,10,11,9,12,13,14,15,16,17,18,19,20,21
 showlistfieldlist = 1,2,3,4,5,6,7,8,10,11,9,12,13,14,15,16,17,18,19,20,21,22
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
@@ -70,11 +72,10 @@ action_submit = submit:save:s,cancel:cancel:c
 primarykey = 0
 uniquekey = 0
 returnmodel = init_default
-showlistfieldlist = 1,2,3,4,5,6,7,8,9,11,12,13,14,15,16,17,18,19
-showlistnull = notnull,null,notnull,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = input,autoincrementdate,input,radiofilter:bookssetleibie:1:1,input,input,depttoname,nowshow,tdoafile,notshow,notshow,userdefine:jineinput,input,input,date,input,input,textarea
-showlistfieldprivate = ,,,,,,,,,,,,,,,,,
-
+showlistfieldlist = 1,2,3,4,7,8,9,10,12,13,14,15,16,17,18,19,20
+showlistnull = notnull,null,notnull,null,null,null,null,null,null,null,null,null,null,null,null,null,null
+showlistfieldfilter = input,autoincrement,input,radiofilter:bookssetleibie:1:1,depttoname,nowshow,tdoafile,input,notshow,notshow,userdefine:jineinput,input,input,date,input,input,textarea
+showlistfieldprivate = ,,,,,,,,,,,,,,,,
 
 [view_default]
 tablename = booksset
