--- a/trunk/general/TDLIB/Interface/TuShuGuanLi/Model/bookssetbaofei_newai.ini
+++ b/trunk/general/TDLIB/Interface/TuShuGuanLi/Model/bookssetbaofei_newai.ini
@@ -10,6 +10,8 @@ primarykey = 0
 uniquekey = 0
 systemorder = 0:desc
 pagenums_model = 25
+UserSumFunction = 12
+UserUnitFunction = RMB
 action_search = 1,2,3,4,5,6,7,8,9,10,11,12
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null
@@ -60,7 +62,6 @@ showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11,12
 showlistnull = null,null,null,null,null,null,null,null,null,null,null,null
 showlistfieldfilter = input,input,input,input,input,input,input,input,input,input,input,input
 showlistfieldprivate = ,,,,,,,,,,,
-
 
 [view_default]
 tablename = bookssetbaofei
