--- a/trunk/general/TDLIB/Interface/TuShuGuanLi/Model/bookssetin_newai.ini
+++ b/trunk/general/TDLIB/Interface/TuShuGuanLi/Model/bookssetin_newai.ini
@@ -10,6 +10,8 @@ primarykey = 0
 uniquekey = 0
 systemorder = 0:desc
 pagenums_model = 25
+UserSumFunction = 10
+UserUnitFunction = RMB
 action_search = 1,2,3,4,5,6,7,8,9,10
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10
 showlistnull = null,null,null,null,null,null,null,null,null,null
@@ -59,7 +61,6 @@ returnmodel = init_default
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10
 showlistnull = null,null,null,null,null,null,null,null,null,null
 showlistfieldfilter = input,input,input,input,input,input,input,input,input,input
-
 
 [view_default]
 tablename = bookssetin
