--- a/trunk/general/TDLIB/Interface/TuShuGuanLi/Model/bookstuihuan_newai.ini
+++ b/trunk/general/TDLIB/Interface/TuShuGuanLi/Model/bookstuihuan_newai.ini
@@ -10,10 +10,12 @@ primarykey = 0
 uniquekey = 0
 systemorder = 0:desc
 pagenums_model = 25
+UserSumFunction = 11
+UserUnitFunction = RMB
 action_search = 1,2,3,4,5,6,7,8,9,10,11
 showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11
-showlistnull = null,null,null,null,null,null,null,null,null,null,null,null
-showlistfieldfilter = input,input,input,input,input,input,input,tablefiltercolor:user:1:2,input,input,input,input
+showlistnull = null,null,null,null,null,null,null,null,null,null,null
+showlistfieldfilter = input,input,input,input,input,input,input,tablefiltercolor:user:1:2,input,input,input
 
 [delete_array]
 tablename = bookstuihuan
@@ -60,7 +62,6 @@ showlistfieldlist = 1,2,3,4,5,6,7,8,9,10,11
 showlistnull = null,null,null,null,null,null,null,null,null,null,null
 showlistfieldfilter = input,input,input,input,input,input,input,input,input,input,input
 showlistfieldprivate = ,,,,,,,,,,
-
 
 [view_default]
 tablename = bookstuihuan
